--- a/config/externals.yaml
+++ b/config/externals.yaml
@@ -18,6 +18,13 @@ google_fonts:
             formats:
                 - woff2
                 - woff
+        'Inter Tight':
+            variants:
+                - 700
+            subsets:
+                - latin-ext
+            formats:
+                - ttf
     icons:
         types:
             - 'Material Icons'
