--- a/config/app.yaml
+++ b/config/app.yaml
@@ -32,4 +32,8 @@ default    :
         background : [ 255, 255, 255 ]
         text_color : [ 'rand(128)', 'rand(128)', 'rand(128)' ]
         noise_color: [ 'rand(128) + 128', 'rand(128) + 128', 'rand(128) + 128' ]
+tauntaun:
+    database:
+        log:
+            all: local/app.sql
 optional_include: local/config.yaml
