Relocation of build and externals

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,6 @@ local/
 *.sublime-project
 *.sublime-workspace
 
-#-------------------------------------------------------------------------------
-
 # Prove
 .prove
 
@@ -29,19 +27,12 @@ cover_db/
 nytprof/
 nytprof.out
 
-#-------------------------------------------------------------------------------
-
 # Dest Status
 /.dest/
 
 # GitHub Actions
 /src/
 
-#-------------------------------------------------------------------------------
-
 # Application
-/static/app.css
-/static/fonts/
-/config/assets/css/fonts/
-/static/js/vue/
-/static/font-awesome/
+/static/build/
+/static/externals/
