--- a/config/externals.yaml
+++ b/config/externals.yaml
@@ -1,8 +1,8 @@
 ---
 google_fonts:
     dest:
-        fonts : static/fonts
-        css   : config/assets/css/fonts
+        fonts : static/externals/google_fonts/fonts
+        css   : static/externals/google_fonts/css
     fonts:
         'Poppins':
             variants:
