--- a/config/app.yaml
+++ b/config/app.yaml
@@ -19,7 +19,7 @@ default:
         home_type : md
         home_title: Christian Bible Quizzing
         home_name : CBQ Home
-    iq_rss: ../iq/iq.rss
+    # iq_rss: ../iq/iq.rss
     email:
         from: Christian Bible Quizzing <q@cbqz.org>
     captcha:
