--- a/config/app.yaml
+++ b/config/app.yaml
@@ -28,8 +28,9 @@ default:
     min_passwd_length: 8
     token_expiration : 86400 # 1 day
     regional_cms:
-        path_suffix: ../regions
-        settings   : config
+        path_suffix : ../regions
+        settings    : config
+        nav_position: 4
     redirects:
         /slack  : https://join.slack.com/t/biblequizzing/shared_invite/zt-dkkz0wlh-x3~NlagTgtdvT3m2jh~dig
         /rules  : /CBQ_system/rule_book.md
