People (user) list functionality

--- a/config/app.yaml
+++ b/config/app.yaml
@@ -40,7 +40,7 @@ default:
         - Quizzer
         - Coach
         - Parent
-        - Officials
+        - Official
         - Regional Board
         - Pastor
         - Volunteer
