--- a/config/app.yaml
+++ b/config/app.yaml
@@ -54,6 +54,23 @@ default:
             - Official
             - Volunteer
             - Spectator
+        bibles:
+            - AKJV
+            - AMP
+            - BSB
+            - ESV
+            - HCSB
+            - HWP
+            - KJ21
+            - KJV
+            - NASB
+            - NASB5
+            - NIV
+            - NIV84
+            - NKJV
+            - NLT
+            - NRSVA
+            - RSV
 tauntaun:
     database:
         log:
