--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                perl-version: [ devel, 40, 38, 36, 34, 32, 30, 28, 26, 24 ]
+                perl-version: [ 40, 38, 36, 34, 32, 30, 28, 26, 24 ]
         container:
             image: |-
                 perldocker/perl-tester:${{
@@ -60,4 +60,4 @@ jobs:
               working-directory: ${{ github.workspace }}/site
             - run: cover -report codecov
               working-directory: ${{ github.workspace }}/site
-              if: env.CODECOV_TOKEN != null && ( matrix.perl-version == 'devel' || matrix.perl-version >= 26 )
+              if: env.CODECOV_TOKEN != null && matrix.perl-version >= 26
