Add regions to linda

--- a/config/app.yaml
+++ b/config/app.yaml
@@ -18,6 +18,7 @@ default:
                 - static/js
                 - templates
                 - ../../omniframe
+                - ../regions
     template:
         email:
             include_path:
